Version 1.1.0
	- added device autodetection support

Version 1.0.0
	- initial release