@@ -1,5 +1,8 @@
 Version 1.1.0
 	- added device autodetection support
-
+	- added programming frequency autodetection
+	- added support for low speed devices (>128kHz)
+	- fixed crash when the configuration directory does not exist
+	
 Version 1.0.0
 	- initial release
